@startuml
title Dental Booking System - API Profile (Class Diagram)

' --- Style Configuration ---
skinparam monochrome false
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
    BackgroundColor White
    ArrowColor #666666
    BorderColor #999999
}
hide circle

' --- API Service Profile ---
package "Dental Booking Service" <<Profile>> {

    class "Dental Service" as Service <<Application>> #FFF2CC {
    }

    ' --- Dentists Resource ---
    class "Dentists" as DentistsResource <<Resource>> #E2EFDA {
        <<GET>> + getDentists(): Dentist[]
    }

    ' --- Appointments Resource ---
    class "Appointments" as BookingsResource <<Resource>> #E2EFDA {
        <<GET>> + getBookings(): Booking[]
        <<POST>> + createBooking(): Booking
    }

    class "Appointment" as BookingResource <<Resource>> #E2EFDA {
        <<GET>> + getBooking(): Booking
        <<PUT>> + updateBooking(): Booking
        <<DELETE>> + deleteBooking(): void
    }

    ' --- Representations (Data Models) ---
    class "Dentist" as DentistModel <<Representation>> #E2EFDA {
        - name: String
        - yearsOfExperience: Integer
        - areaOfExpertise: String
    }

    class "Booking" as BookingModel <<Representation>> #E2EFDA {
        - _id: ObjectId
        - user: Ref(User)
        - dentist: Ref(Dentist)
        - date: Date
        - createdAt: Date
    }

}

' --- Relationships (RESTful Path) ---
Service -right-> DentistsResource : /dentists\n<<Path>>
Service -down-> BookingsResource : /bookings\n<<Path>>

BookingsResource -right-> BookingResource : /{bookingId}\n<<Path>>

' --- Data Usage ---
DentistsResource ..> DentistModel : <<use>>
BookingsResource ..> BookingModel : <<use>>
BookingResource ..> BookingModel : <<use>>

' --- Extra Credit Ideas (Logic Constraints) ---
note bottom of BookingModel
  **Extra Credit Logic:**
  * One session per user
  * Booking date must be in future
  * Status: [pending, completed]
end note

@enduml